--- a/index.html
+++ b/index.html
@@ -528,6 +528,105 @@
                     </div>
                 </div>
             </section>
+
+            <!-- staff -->
+            <section class="staff">
+                <div class="container">
+                    <section class="staff__top">
+                        <p class="staff__desc">Pet Care Staff</p>
+                        <h2 class="section-heading">Meet Our Groomers</h2>
+                    </section>
+                    <div class="staff__list">
+                        <!-- item1 -->
+                        <div class="staff-item">
+                            <figure class="staff-item__img-wrap">
+                                <img
+                                    src="./assets/img/staff1.png"
+                                    alt=""
+                                    class="staff-item__img"
+                                />
+                            </figure>
+                            <p class="staff-item__desc">Pet Trainer</p>
+                            <h3 class="staff-item__heading">Meghan Samit</h3>
+                        </div>
+                        <!-- item2 -->
+                        <div class="staff-item">
+                            <figure class="staff-item__img-wrap">
+                                <img
+                                    src="./assets/img/staff2.png"
+                                    alt=""
+                                    class="staff-item__img"
+                                />
+                            </figure>
+                            <p class="staff-item__desc">Veterinarian</p>
+                            <h3 class="staff-item__heading">Alissa Silva</h3>
+                        </div>
+                        <!-- item3 -->
+                        <div class="staff-item">
+                            <figure class="staff-item__img-wrap">
+                                <img
+                                    src="./assets/img/staff3.png"
+                                    alt=""
+                                    class="staff-item__img"
+                                />
+                            </figure>
+                            <p class="staff-item__desc">Veterinarian</p>
+                            <h3 class="staff-item__heading">Cindy Harris</h3>
+                        </div>
+                        <!-- item4 -->
+                        <div class="staff-item">
+                            <figure class="staff-item__img-wrap">
+                                <img
+                                    src="./assets/img/staff4.png"
+                                    alt=""
+                                    class="staff-item__img"
+                                />
+                            </figure>
+                            <p class="staff-item__desc">Animal Caretaker</p>
+                            <h3 class="staff-item__heading">Lucas Tony</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- spicing -->
+            <section class="spicing">
+                <div class="container">
+                    <div class="spicing__top">
+                        <h2 class="section-heading">The Best Choicev</h2>
+                        <p class="spicing__desc">
+                            We offer long-term and short-term boarding. Every
+                            dog has its own private, spacious room and daily
+                            individual time in our large play yard.
+                        </p>
+                    </div>
+
+                    <div class="spicing__switch">
+                        <div class="spicing__switch-inner">
+                            <input
+                                type="checkbox"
+                                class="spicing__switch-input"
+                                id="spicing-switch-input"
+                                hidden
+                            />
+                            <label
+                                for="spicing-switch-input"
+                                class="spicing__switch-wrap"
+                            >
+                                <span class="spicing-switch-value">
+                                    Monthly
+                                </span>
+                                <span class="spicing-switch-value">yearly</span>
+                            </label>
+                            <img
+                                src="./assets/img/save.svg"
+                                alt=""
+                                class="spicing__img"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
